<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    tools:context="com.example.android.appportfolio.PortfolioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:text="@string/my_nanodegree_apps_title"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/popular_movies_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:text="@string/popular_movies_button_title"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/stock_hawk_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:text="@string/stock_hawk_button_title"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/built_it_bigger_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:text="@string/build_it_bigger_button_title"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/make_your_app_material_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:text="@string/make_your_app_material_button_title"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/go_ubiquitous_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:text="@string/go_ubiquitous_button_title"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/capstone_project_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:text="@string/captstone_project_button_title"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"/>

</LinearLayout>
